# khm-analyzer

./: README.md  filelist.txt  pyproject.toml  ruff.toml
.github/workflows/: main.yml
docs/: rendering.md
src/khm_analyzer/: __init__.py  bases.py  contracts.py  corrections.py  download.py  dtaids.py  errors.py  logging_conf.py  lookup.py  namespace.py  parser.py  tale.py  utils.py  validation.py  warnings.py
src/khm_analyzer/cli/: __init__.py  display.py  download_all_sources.py  download_source.py  validate.py
src/khm_analyzer/composites/: __init__.py  word.py
src/khm_analyzer/elements/: __init__.py  head.py  line.py  linegroup.py  paragraph.py  sentence.py  sentence_part.py  tale.py  title.py  word.py  word_part.py
tests/: conftest.py  test_download.py  test_parser.py  test_validation.py
